--- a/avril/src/app/home/home.component.html
+++ b/avril/src/app/home/home.component.html
@@ -2,3 +2,5 @@
   home works!
 </p>
 <button type="button" (click)="firstClick()">yay!</button>
+<button type="button" (click)="listUsers()">Obtener usuarios</button>
+<button type="button" (click)="createOne()">Create one</button>
